--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_core_web: ^0.1.1+2
   firebase_auth_web: ^0.1.3+1
   cloud_firestore_web: ^0.1.1+2
+  shared_preferences: ^0.5.7+3
+  after_layout: ^1.0.7+2
 
 dev_dependencies:
   flutter_test:
